# GPU-LDPC

./: .gitignore  CMakeLists.txt  README.md
src/: allocate_gpu_memory.h  h_matrix_utils.cpp  h_matrix_utils.h  nr_ldpc.h
src/common/: common.h  error_handler.cu  error_handler.h  logger.cpp  logger.h
test/: claude.cu  deepseek.cu  latest.cu  layer.cu  main.cpp  test_compressH.cpp  test_compressH_to_gpu_constant.cu  test_llr_to_gpu_memory  test_llr_to_gpu_memory.cu
